--- a/TicketAgency_Client/TicketAgency_Client/App.config
+++ b/TicketAgency_Client/TicketAgency_Client/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <add name="AdresaIP" connectionString="192.168.1.6" />
+    <add name="AdresaIP" connectionString="ip" />
   </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
